# mpmv2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/toolchain/: arm-none-eabi.cmake
lib/: CMakeLists.txt
lib/SeggerRTT/: CMakeLists.txt
lib/ti/: CMakeLists.txt
lib/ti/devices/cc13x2_cc26x2/: CMakeLists.txt
lib/ti/devices/cc13x2_cc26x2/linker_files/: cc26x2r1f.lds
src/: CMakeLists.txt  board.c  board.h  ccfg.c  debug.h  dma.c  dma.h  file_system.h  ihex.c  ihex.h  led_rgb.c  led_rgb.h  lfs_driver.c  main.c  nor_flash.c  nor_flash.h  ppm.c  ppm.h  serial.c  serial.h  spi.c  spi.h  syscalls.c  timer.c  timer.h  uart.c  uart.h
tools/: dump_flash.py  serial_bl.py  test_uart.py
